--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-
+<!--add removal
 <!--========================Header Starts======================================-->
 
 	<div class="header">
