--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
 		</ul>
 	</div>
-<!--==============================Navigatin Ends=============================-->
+<!--==============================Navigatin Ends here=============================-->
 
 
 <div class="content">
